# fisher_py

./: .gitmodules  LICENSE  MANIFEST.in  README.md  RawFileReaderLicense.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish  main-v2.yml  main.yml  publish-to-pypi.yml
examples/: generate_mgf_file_example.py  raw_file_access_example.py  raw_file_reader_example.py
fisher_py/: raw_file.py  utils.py
fisher_py/data/: __init__.py  common_core_data_object.py  device.py  file_header.py  file_type.py  ft_average_options.py  raw_file_thread_accessor.py  scan_event.py  sequence_info.py  source_fragmentation_info_valid_type.py  tolerance_units.py
fisher_py/data/business/: barcode_status_type.py  chromatogram_signal_cls.py  data_units.py  header_item.py  instrument_data.py  instrument_selection.py  mass_options.py  mass_to_frequency_converter.py  range_factory.py  sample_information.py  sample_type.py  scan.py  segmented_scan.py  sequence_file_writer_factory.py  tune_data_values.py
fisher_py/exceptions/: core_exception.py  raw_file_exception.py
fisher_py/net_wrapping/: __init__.py  net_wrapper_base.py
fisher_py/raw_file_reader/: __init__.py  raw_file_access.py  raw_file_reader_adapter.py
src/fisher_py/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_raw_file.py
tests/data/: .gitignore  ACE_0793-01_MK13.ftp  ACE_0793-01_MK13.info.json  Angiotensin_325-CID.info.json  README.md  invalid.raw
tests/net_wrapping/: test_wrapped_arrays.py  test_wrapped_lists.py
tests/raw_file_reader/: test_raw_file_access.py  test_raw_file_reader_adapter.py
(+88 files in other folders)
